{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 31,
  "lineage": "e29d29cf-86db-4129-3b91-d1914f5d22ed",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096653950110:subnet/subnet-1f90b678",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-1f90b678",
            "map_public_ip_on_launch": true,
            "owner_id": "096653950110",
            "state": "available",
            "vpc_id": "vpc-deddafa4"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096653950110:subnet/subnet-9d634fb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-9d634fb3",
            "map_public_ip_on_launch": true,
            "owner_id": "096653950110",
            "state": "available",
            "vpc_id": "vpc-deddafa4"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096653950110:subnet/subnet-30d3227d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-30d3227d",
            "map_public_ip_on_launch": true,
            "owner_id": "096653950110",
            "state": "available",
            "vpc_id": "vpc-deddafa4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096653950110:vpc/vpc-deddafa4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-614de81c",
            "default_route_table_id": "rtb-4e37ce30",
            "default_security_group_id": "sg-92e3b3ce",
            "dhcp_options_id": "dopt-26f2ed5d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-deddafa4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-4e37ce30",
            "owner_id": "096653950110"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024582e76075564db",
            "arn": "arn:aws:ec2:us-east-1:096653950110:instance/i-0f150aeaf8a37d217",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo1-host",
            "id": "i-0f150aeaf8a37d217",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo1-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-035b24ee3f200f1a6",
            "private_dns": "ip-172-31-11-53.ec2.internal",
            "private_ip": "172.31.11.53",
            "public_dns": "ec2-34-200-228-32.compute-1.amazonaws.com",
            "public_ip": "34.200.228.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0b2bcbb60b6fd92ea",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo1-common",
              "demo1-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1f90b678",
            "tags": {
              "Name": "demo1-control_plane-1",
              "kubernetes.io/cluster/demo1": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06349dad98e6ecf2e",
              "sg-0f41a358d314cb9ea"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024582e76075564db",
            "arn": "arn:aws:ec2:us-east-1:096653950110:instance/i-02e39e080d2e93341",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo1-host",
            "id": "i-02e39e080d2e93341",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo1-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-04c7e819202747e78",
            "private_dns": "ip-172-31-88-58.ec2.internal",
            "private_ip": "172.31.88.58",
            "public_dns": "ec2-34-227-105-232.compute-1.amazonaws.com",
            "public_ip": "34.227.105.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-04d3065e01d2f360b",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo1-common",
              "demo1-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9d634fb3",
            "tags": {
              "Name": "demo1-control_plane-2",
              "kubernetes.io/cluster/demo1": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06349dad98e6ecf2e",
              "sg-0f41a358d314cb9ea"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024582e76075564db",
            "arn": "arn:aws:ec2:us-east-1:096653950110:instance/i-092f4779378c0a788",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo1-host",
            "id": "i-092f4779378c0a788",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo1-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-047a3b5506bc4b1b0",
            "private_dns": "ip-172-31-21-143.ec2.internal",
            "private_ip": "172.31.21.143",
            "public_dns": "ec2-54-205-77-1.compute-1.amazonaws.com",
            "public_ip": "54.205.77.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0980a8aa96b8865a3",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo1-common",
              "demo1-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-30d3227d",
            "tags": {
              "Name": "demo1-control_plane-3",
              "kubernetes.io/cluster/demo1": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06349dad98e6ecf2e",
              "sg-0f41a358d314cb9ea"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:loadbalancer/net/demo1-api-lb/e40197dabf82c1e9",
            "arn_suffix": "net/demo1-api-lb/e40197dabf82c1e9",
            "dns_name": "demo1-api-lb-e40197dabf82c1e9.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:096653950110:loadbalancer/net/demo1-api-lb/e40197dabf82c1e9",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "demo1-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-1f90b678"
              },
              {
                "subnet_id": "subnet-30d3227d"
              },
              {
                "subnet_id": "subnet-9d634fb3"
              }
            ],
            "subnets": [
              "subnet-1f90b678",
              "subnet-30d3227d",
              "subnet-9d634fb3"
            ],
            "tags": {
              "Cluster": "demo1",
              "kubernetes.io/cluster/demo1": "shared"
            },
            "vpc_id": "vpc-deddafa4",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:listener/net/demo1-api-lb/e40197dabf82c1e9/5d125fc19861088f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo1-api/e2ec252826966cb7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:096653950110:listener/net/demo1-api-lb/e40197dabf82c1e9/5d125fc19861088f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:loadbalancer/net/demo1-api-lb/e40197dabf82c1e9",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo1-api/e2ec252826966cb7",
            "arn_suffix": "targetgroup/demo1-api/e2ec252826966cb7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo1-api/e2ec252826966cb7",
            "lambda_multi_value_headers_enabled": false,
            "name": "demo1-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-deddafa4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo1-api/e2ec252826966cb7-20190914002247534400000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo1-api/e2ec252826966cb7",
            "target_id": "i-0f150aeaf8a37d217"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo1-api/e2ec252826966cb7-20190914002247570100000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo1-api/e2ec252826966cb7",
            "target_id": "i-02e39e080d2e93341"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo1-api/e2ec252826966cb7-20190914002247589200000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo1-api/e2ec252826966cb7",
            "target_id": "i-092f4779378c0a788"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096653950110:security-group/sg-0f41a358d314cb9ea",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f41a358d314cb9ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "demo1-common",
            "name_prefix": null,
            "owner_id": "096653950110",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/demo1": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-deddafa4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096653950110:security-group/sg-06349dad98e6ecf2e",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-06349dad98e6ecf2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "demo1-control_planes",
            "name_prefix": null,
            "owner_id": "096653950110",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/demo1": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-deddafa4"
          }
        }
      ]
    }
  ]
}